--- a/.gitignore
+++ b/.gitignore
@@ -131,4 +131,11 @@ venv.bak/
 # mypy
 .mypy_cache/
 
+Lessons/
+project/
+Slides/
+travis-assests/
+Setup.md
+Travis-CI-Setup.md
+
 # End of https://www.gitignore.io/api/macos,python
